--- a/bootstrap/glasskube-application.yaml
+++ b/bootstrap/glasskube-application.yaml
@@ -9,7 +9,7 @@ spec:
   project: default
   source:
     path: bootstrap/glasskube
-    repoURL: https://github.com/username/repository # put your own repo url here
+    repoURL: https://github.com/pmig/glasskube-argocd-starter # put your own repo url here
     targetRevision: HEAD
   syncPolicy:
     automated:
